v0.4.20 — Fix sidebar header alignment issue

--- a/src/components/SidebarWrapper/SidebarHeader/_SidebarHeader.scss
+++ b/src/components/SidebarWrapper/SidebarHeader/_SidebarHeader.scss
@@ -5,6 +5,8 @@
     align-content   : center;
     align-items     : center;
     justify-content : center;
+
+    * { line-height : 1; }
 }
 
 .header-logo { display : block; }
